Add empty settings fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="gas_stations">Gas stations</string>
     <string name="map">Map</string>
     <string name="add_station">Add station</string>
+    <string name="settings">Settings</string>
 </resources>
