--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="map">Map</string>
     <string name="add_station">Add station</string>
     <string name="settings">Settings</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
