--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,10 @@
     <string name="add_station">Add station</string>
     <string name="settings">Settings</string>
     <string name="title_activity_maps">Map</string>
+    <string name="signed_out">Signed out</string>
+    <string name="login">Login</string>
+    <string name="sign_out">Sign out</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_password">Password</string>
+    <string name="no_account">No account yet? Create one</string>
 </resources>
