--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="hint_email">Email</string>
     <string name="hint_password">Password</string>
     <string name="no_account">No account yet? Create one</string>
+    <string name="create_account">Create Account</string>
+    <string name="already_member">Already a member? Login</string>
+    <string name="username">Username</string>
+    <string name="sign_up">Sign up</string>
 </resources>
