--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="already_member">Already a member? Login</string>
     <string name="username">Username</string>
     <string name="sign_up">Sign up</string>
+    <string name="auth_failed">Authentication failed.</string>
+    <string name="blank_fields">All fields must be filled in.</string>
 </resources>
